Fixed the sent chat box, now it wraps wonderfully as per the width of the viewport

--- a/client/assets/styles/disa.css
+++ b/client/assets/styles/disa.css
@@ -300,6 +300,8 @@
 
 .sent-message{
   text-align: right;
+  padding-left: 20%;
+  padding-right: 2%;
 }
 
 .inline-block{
